Fixed spacing by using vh and rows

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,10 +5,10 @@
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
-  font-family: sans-serif;
+  /*font-family: sans-serif;*/
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Roboto', sans-serif !important;
       font-weight: 100;
 }
 /*
